And now... the fix!

--- a/templates/nrsysmond.cfg.erb
+++ b/templates/nrsysmond.cfg.erb
@@ -9,7 +9,7 @@
 
 #
 # Option : license_key
-# Value  : 40-character hexadecimal string provided by New Relic. This is
+# Value  : 40-character alphanumeric string provided by New Relic. This is
 #          required in order for the server monitor to start.
 # Default: none
 #
