Fix incorrect configuration name
s/disable_docker/disable_nfs

--- a/templates/nrsysmond.cfg.erb
+++ b/templates/nrsysmond.cfg.erb
@@ -159,7 +159,7 @@ labels="<% @labels.each do |key, value| -%><%= key %>:<%= value %>;<% end %>"
 # Value  : Set to true to disable NFS client statistics gathering.
 # Default: false
 #
-disable_docker=<%= @disable_nfs %>
+disable_nfs=<%= @disable_nfs %>
 <% end %>
 <% if @disable_docker %>
 #
